--- a/Calculator/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Calculator/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11760" systemVersion="16D30a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12100" systemVersion="16D30a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11755"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12072"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -165,14 +164,14 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="nn1-xW-9kh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Fiz-lb-Al0"/>
+                            <constraint firstAttribute="trailing" secondItem="nn1-xW-9kh" secondAttribute="trailing" constant="10" id="4Ye-fN-CF3"/>
                             <constraint firstAttribute="trailing" secondItem="7fW-8X-KJh" secondAttribute="trailing" constant="10" id="Glz-VR-Trj"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7fW-8X-KJh" secondAttribute="bottom" constant="10" id="JkN-x6-bmY"/>
-                            <constraint firstItem="nn1-xW-9kh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="N8v-3c-5gW"/>
+                            <constraint firstItem="nn1-xW-9kh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="T7y-Ik-XwO"/>
+                            <constraint firstAttribute="trailing" secondItem="nn1-xW-9kh" secondAttribute="trailing" constant="10" id="VH9-9Y-9Vi"/>
                             <constraint firstItem="7fW-8X-KJh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="dmY-6V-FyQ"/>
+                            <constraint firstItem="7fW-8X-KJh" firstAttribute="top" secondItem="nn1-xW-9kh" secondAttribute="bottom" constant="10" id="dzT-AD-pdX"/>
                             <constraint firstItem="7fW-8X-KJh" firstAttribute="top" secondItem="nn1-xW-9kh" secondAttribute="bottom" constant="10" id="gr3-Fk-jjk"/>
-                            <constraint firstAttribute="trailing" secondItem="nn1-xW-9kh" secondAttribute="trailing" constant="20" id="k9e-PP-tLP"/>
-                            <constraint firstAttribute="trailing" secondItem="nn1-xW-9kh" secondAttribute="trailing" constant="10" id="pxd-KV-fXM"/>
                             <constraint firstItem="nn1-xW-9kh" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="x1f-6N-PFk"/>
                         </constraints>
                     </view>
